# i18n-agent-action

./: .dockerignore  .gitignore  AGENTS.md  App.py  CODEOWNERS  Dockerfile  ExpiringDictStorage.py  README.md  action.yml  clientInfo.py  config.yaml  deepseek_tokenizer.py  filesscopes.py  flowOne.py  flowTwo.py  main.py  metric.py  mkdocs.yml  original_markdown.md  prompt.md  proper_nouns_handle.py  pyproject.toml  requirements.txt  soundToText.py  transcontrol.py  translate.py  translateConfig.py  utils.py
.github/: dependabot.yml
AgentUtils/: Agent.py  ExpiringDictStorage.py  clientInfo.py  conftest.py  deepseek_tokenizer.py  metric.py  span.py  test_expiring_dict_storage.py  test_integration.py  test_span.py  test_span_manager.py
App/: App.py  TranslationApp.py  leftsidebar.py  main.py  pyproject.toml  rightsidebar.py
Business/: filesscopes.py  metric.py  translate.py  translateConfig.py  utils.py
docs/: AgentDevelopmentPrinciples.ar.md  AgentDevelopmentPrinciples.en.md  AgentDevelopmentPrinciples.es.md  AgentDevelopmentPrinciples.fr.md  AgentDevelopmentPrinciples.ja.md  AgentDevelopmentPrinciples.zh.md  StoryBehindThisProject.ar.md  StoryBehindThisProject.en.md  StoryBehindThisProject.es.md  StoryBehindThisProject.fr.md  StoryBehindThisProject.ja.md  StoryBehindThisProject.md  StoryBehindThisProject.zh.md  index.ar.md  index.en.md  index.es.md  index.fr.md  index.ja.md  index.md  index.zh.md  index_zh.md  prompt_injection_test.ar.md  prompt_injection_test.en.md  prompt_injection_test.es.md  prompt_injection_test.fr.md  prompt_injection_test.ja.md  prompt_injection_test.md  prompt_injection_test.zh.md  selfEvalution.ar.md  selfEvalution.en.md  selfEvalution.es.md  selfEvalution.fr.md  (+3 more)
(+9 files in other folders)
