[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["Business", "AgentUtils", "App"]  # 明确指定包

[project]
name = "i18n-agent-action"
version = "0.1.0"
requires-python = ">=3.12,<4.0"  # 更新这一行
description = "An Agent running in GHA for free us from i18n works in documentation repos"
authors = [
    { name = "SamYuan1990", email = "yy19902439@126.com" },
]
dependencies = [
    "openai (>=1.100.2,<2.0.0)",
    "transformers (>=4.55.2,<5.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "python-defer (>=0.2.1,<0.3.0)"
]

[project.urls]
Homepage = "https://github.com/SamYuan1990/i18n-agent-action"
Documentation = "https://samyuan1990.github.io/i18n-agent-action/"
Repository = "https://github.com/SamYuan1990/i18n-agent-action"
Issues = "https://github.com/SamYuan1990/i18n-agent-action/issues"

[project.optional-dependencies]
app = [
    "flet[all]>=0.28.3,<0.29.0"
]

docs = [
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.6.17,<10.0.0",
    "mkdocs-get-deps>=0.2.0,<0.3.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7,<2.0.0",
    "mkdocs-material-extensions>=1.3.1,<2.0.0",
    "mkdocs-static-i18n>=1.3.0,<2.0.0"
]

[tool.poetry.group.app.dependencies]
flet = {extras = ["all"], version = "^0.28.3"}

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.17"
mkdocs-get-deps = "^0.2.0"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"
mkdocs-material-extensions = "^1.3.1"
mkdocs-static-i18n = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

